--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "build-d": "babel --watch public/js -d controller",
     "build": "webpack",
-    "dev": "webpack serve --open"
+    "dev": "webpack serve --open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d docs"
   },
-  "author": "diego",
+  "author": "Eniuman",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.3",
     "@babel/preset-env": "^7.28.3",
     "babel-loader": "^10.0.0",
+    "gh-pages": "^6.3.0",
     "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
